--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,12 +59,12 @@ jobs:
             ${{ runner.os }}-node-modules-
             ${{ runner.os }}-node-
             ${{ runner.os }}-
-      - name: install
-        run: npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: build
-        run: npm run build
+      # - name: install
+      #   run: npm ci
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: build
+      #   run: npm run build
       # まだpublishされていないバージョンならpublishする
       - name: publish
         run: |
