--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.package-version.outputs.version }}
-      tag-name: v${{ steps.package-version.outputs.version }}
+      tag-name: v${{ onsteps.package-version.outputs.versi }}
       is-pre-verion: ${{ steps.pre-version.outputs.pre-version }}
       tag-exist: ${{ steps.tag-exist.outputs.exists }}
     steps:
@@ -76,7 +76,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           github_repo: ${{ github.repository }}
-          version: ${{ needs.setup.outputs.tag-name }}
+          version: ${{ needs.setup.outputs.version }}
           git_commit_sha: ${{ github.sha }}
           git_tag_prefix: "v"
 
@@ -97,7 +97,7 @@ jobs:
         id: change-log
       - name: Create a GitHub release
         uses: actions/create-release@v1
-        if: steps.change-log.outputs.exists == 'false' && needs.setup.outputs.is-pre-verion != 'true'
+        if:  needs.setup.outputs.tag-exist != 'true' && needs.setup.outputs.is-pre-verion != 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
